--- a/src/modules/authentication/index.css
+++ b/src/modules/authentication/index.css
@@ -1,7 +1,73 @@
-.Login-root {
+.login-root {
+  position: absolute;
+  top: 0;
+  left: 0;
   height: 100%;
   width: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.login--background {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: linear-gradient(140deg, #f96b2ed7, #2d3863d7);
+  filter: blur(3px);
+  -webkit-filter: blur(3px);
+}
+
+.login--card {
+  position: absolute;
+  width: 850px;
+  height: 500px;
+  background-color: #4a5479;
+  box-shadow: 0 10px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19) !important;
+  display: flex;
+}
+
+.login--card--left {
+  background-color: white;
+  width: 55%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.logo--image {
+  position: absolute;
+  top: 15px;
+  left: 15px;
+  margin-bottom: 40px;
+}
+
+.telystore--image {
+  width: 40%;
+  margin-bottom: 20px;
+  margin-top: 50px;
+}
+
+.inventory--image {
+  height: 40%;
+}
+
+.login--card--text {
+  color: #070337;
+  font-family: unset;
+  font-size: 22px;
+  font-weight: 450;
+}
+
+.login--card--right {
+  width: 45%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
