--- a/src/modules/authentication/index.css
+++ b/src/modules/authentication/index.css
@@ -25,7 +25,7 @@
   width: 850px;
   height: 500px;
   background-color: #4a5479;
-  box-shadow: 0 10px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19) !important;
+  box-shadow: 0 10px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   display: flex;
 }
 
@@ -57,7 +57,6 @@
 }
 
 .login--card--text {
-  color: #070337;
   font-family: unset;
   font-size: 22px;
   font-weight: 450;
@@ -68,6 +67,58 @@
   height: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-evenly;
   align-items: center;
+  color: #f4f4f4;
+}
+
+.login--form {
+  height: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.login--input-field {
+  height: 30px;
+  width: 220px;
+  font-size: 14px;
+  border: 0px;
+  border-bottom: 1px solid #f4f4f4;
+  background-color: transparent;
+  color: #f4f4f4;
+}
+
+.login--input-field:focus {
+  outline: none;
+}
+
+.login--field {
+  display: flex;
+  flex-direction: column;
+}
+
+.login--input-label {
+  text-align: left;
+  color: #f4f4f469;
+  font-size: 12px;
+  margin-left: 1px;
+}
+
+.login--form-submit {
+  height: 30px;
+  width: 105px;
+  border: 0;
+  border-radius: 15px;
+  background-color: #f96b2ed7;
+  color: #f4f4f4;
+  font-size: 15px;
+  font-weight: 650;
+}
+
+.login--form-submit:hover {
+  cursor: pointer;
+  box-shadow: 0 10px 16px 0 rgba(0, 0, 0, 0.05),
+    0 6px 20px 0 rgba(0, 0, 0, 0.05);
 }
