--- a/src/modules/home/index.css
+++ b/src/modules/home/index.css
@@ -2,13 +2,13 @@
   position: absolute;
   top: 0;
   left: 0;
-  height: 100%;
+  height: calc(100% - 30px);
   width: calc(100% - 30px);
   display: flex;
   align-items: center;
   justify-content: center;
   padding: 15px;
-  background-color: #0c1d40;
+  background-image: linear-gradient(140deg, #f96b2e60, #2d3863c8);
 }
 
 .home--body {
@@ -17,11 +17,9 @@
   overflow: hidden;
 }
 
-.home--products-container {
-  height: 100%;
-}
-
 .section {
-  background-color: #ffffff13;
+  border: 2px solid #2d3863;
   width: 100%;
+  box-sizing: border-box;
+  border-radius: 5px;
 }
