--- a/src/modules/home/productsGrid.css
+++ b/src/modules/home/productsGrid.css
@@ -1,4 +1,25 @@
 .products-grid--root {
-  height: 100%;
+  height: calc(100vh - 320px);
+  overflow-y: scroll;
   display: grid;
+  grid-template-columns: calc(50% - 5px) calc(50% - 5px);
+  gap: 10px;
+  padding: 3px;
+  box-sizing: border-box;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+.products-grid--root::-webkit-scrollbar {
+  display: none;
+}
+
+.product {
+  min-height: 120px;
+  /* display: flex;
+  align-items: center; */
+  background-color: #2d386394;
+  border-radius: 8px;
+  box-sizing: border-box;
+  padding: 10px;
 }
