--- a/src/modules/home/productsGrid.css
+++ b/src/modules/home/productsGrid.css
@@ -16,14 +16,25 @@
 
 .product-card {
   min-height: 120px;
+  max-height: 120px;
   background-image: linear-gradient(140deg, #f96b2e26, #2d386326);
   border-radius: 8px;
   box-sizing: border-box;
   padding: 10px;
-
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  position: relative;
+}
+
+.unavailable--image {
+  height: 100px;
+  position: absolute;
+  left: calc(50% - 110px);
+}
+
+.unavailable {
+  opacity: 0.3;
 }
 
 .product-card--text {
