--- a/src/modules/home/infoCard.css
+++ b/src/modules/home/infoCard.css
@@ -1,8 +1,39 @@
 .info-card--root {
-  height: 200px;
+  height: 140px;
   margin-bottom: 15px;
   background-image: linear-gradient(140deg, #f96b2e26, #2d386326);
   border-radius: 8px;
   box-sizing: border-box;
   padding: 10px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.info-card--logo {
+  height: 50px;
+  position: absolute;
+}
+
+.info-card--details {
+  width: 100%;
+  margin-top: 60px;
+  display: grid;
+  grid-template-columns: 33% 33% 33%;
+}
+
+.info-card--column {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.info-card--column.left {
+  margin-top: 60px;
+}
+
+.info-card--text {
+  color: #2d3863;
+  text-align: left;
+  font-size: 22px;
+  font-weight: 650;
 }
