--- a/src/modules/home/productsGrid.css
+++ b/src/modules/home/productsGrid.css
@@ -1,10 +1,14 @@
 .products-grid--root {
-  height: calc(100vh - 320px);
+  height: calc(100vh - 260px);
+}
+
+.products-grid--body {
+  max-height: calc(100vh - 260px);
   overflow-y: scroll;
   display: grid;
   grid-template-columns: calc(50% - 5px) calc(50% - 5px);
   gap: 10px;
-  padding: 3px;
+  padding: 5px;
   box-sizing: border-box;
   -ms-overflow-style: none;
   scrollbar-width: none;
