--- a/src/modules/home/filter.css
+++ b/src/modules/home/filter.css
@@ -1,27 +1,26 @@
 .filter--root {
   margin-bottom: 15px;
-  height: 60px;
+  height: 80px;
   width: 100%;
   box-sizing: border-box;
+  padding: 5px 15px;
   border-radius: 5px;
   display: flex;
+  flex-direction: column;
   align-items: center;
   background-image: linear-gradient(140deg, #f96b2e26, #2d386326);
   color: #2d3863;
-  position: relative;
 }
 
 .filter--title {
-  position: absolute;
-  left: 5px;
+  text-align: left;
+  width: 100%;
   font-size: 20px;
   font-weight: 600;
 }
 
 .filter--controls {
-  position: absolute;
-  width: 50%;
-  left: 25%;
+  width: 100%;
   height: 100%;
   display: flex;
   justify-content: space-between;
@@ -31,6 +30,7 @@
 .filter--text {
   text-align: left;
   font-size: 16px;
+  font-weight: 600;
   margin-right: 10px;
 }
 
@@ -48,13 +48,13 @@
 
 .filter--text-input {
   height: 30px;
-  width: 200px;
+  width: 150px;
 }
 
 .price-range--input {
   height: 30px;
   width: 50px;
-  margin-right: 5px;
+  text-align: center;
 }
 
 .filter--item {
