Makes the home screen and the edit popup representable on smaller screens

--- a/src/modules/home/infoCard.css
+++ b/src/modules/home/infoCard.css
@@ -37,3 +37,9 @@
   font-size: 20px;
   font-weight: 600;
 }
+
+@media screen and (max-width: 769px) {
+  .info-card--root {
+    display: none;
+  }
+}
