--- a/src/modules/home/editPopup.css
+++ b/src/modules/home/editPopup.css
@@ -74,7 +74,6 @@
   width: 105px;
   border: 0;
   border-radius: 15px;
-  /* background-color: #f96b2ed7; */
   color: #f4f4f4;
   font-size: 15px;
   font-weight: 600;
@@ -93,4 +92,23 @@
   cursor: pointer;
   box-shadow: 0 10px 16px 0 rgba(0, 0, 0, 0.05),
     0 6px 20px 0 rgba(0, 0, 0, 0.05);
+}
+
+@media screen and (max-width: 769px) {
+  .edit-popup--body {
+    width: 100vw;
+    height: 100vh;
+  }
+
+  .edit--input-field {
+    width: 90vw;
+  }
+
+  .edit--field--row {
+    width: 90vw;
+  }
+
+  .edit--controls {
+    width: 90vw;
+  }
 }
