--- a/src/modules/home/filter.css
+++ b/src/modules/home/filter.css
@@ -68,3 +68,15 @@
   margin-left: 10px;
   margin-right: 0;
 }
+
+@media screen and (max-width: 769px) {
+  .filter--root {
+    height: 235px;
+  }
+
+  .filter--controls {
+    margin-top: 35px;
+    flex-direction: column;
+    align-items: flex-start;
+  }
+}
