--- a/src/modules/home/productsGrid.css
+++ b/src/modules/home/productsGrid.css
@@ -104,3 +104,9 @@
   font-size: 12px;
   margin-top: auto;
 }
+
+@media screen and (max-width: 769px) {
+  .products-grid--body {
+    grid-template-columns: auto;
+  }
+}
